--- a/web/2thproject/package.json
+++ b/web/2thproject/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.1.1",
     "@mui/styles": "^5.1.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,6 +17,7 @@
     "install": "^0.13.0",
     "node-sass": "4.14.1",
     "npm": "^8.1.2",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
